# unit

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/concepts/: stack-machines.rst
docs/getting-started/: first-program.rst  installation.rst
docs/reference/: errors.rst  instructions.rst  procedure.rst
docs/tutorial/: compilation.rst  procedure-basics.rst  the-api.rst
examples/: brainf.c  calculator.py  factorial.cpp  guessing_game.c  language_with_jit.py
include/unit/: base.h  compilation.h  context.h  errors.h  executable_buffer.h  main.h  platform.h  procedure.h  unit.h  unit.hpp  version.h
include/unit/internal/: allocation.h  architectures.h  basic_block.h  code_buffer.h  compile_context.h  executable_formats.h  map.h  register_allocation.h  set.h  size_map.h  size_set.h  size_vector.h  structure.h  translation.h  vector.h
include/unit/internal/architectures/: amd64.h  x86_64.h
include/unit/internal/formats/: elf.h
python/unit/: __init__.py  context.py  core.c  opcode.py  procedure.py
src/: allocation.c  code_buffer.c  compilation.c  compile_context.c  context.c  errors.c  executable_buffer.c  main.c  map.c  optimize_procedure.c  optimize_translation.c  procedure.c  register_allocation.c  register_optimize.c  set.c  size_map.c  size_set.c  size_vector.c  stack_optimize.c  translation.c  vector.c  version.c
src/aarch64/: aarch64_encode.c  aarch64_local.h  aarch64_lower.c
src/amd64/: amd64_encode.c  amd64_local.h  amd64_lower.c
src/architectures/amd64/: amd64_encode.c  amd64_lower.c
src/architectures/x86_64/: x86_64_encode.c  x86_64_translate.c
src/elf/: elf.c  elf_local.h
src/formats/: elf.c  elf_format.h
src/macho/: macho.c  macho_local.h
tests/: _test_case.py  test_brainf.py  test_code_buffer.c  test_collatz.py  test_factorial.py  test_guessing_game.py  test_map.c  test_set.c  test_size_map.c  test_size_set.c  test_size_vector.c  test_vector.c
