[build-system]
requires = ["scikit-build-core~=0.12"]
build-backend = "scikit_build_core.build"

[project]
name = "unit-compiler"
version = "0.1.0"
description = "Stack-based compiler backend"
requires-python = ">=3.10"

[tool.scikit-build]
cmake.args = ["-DUNIT_BUILD_PYTHON=ON"]
wheel.packages = ["python/unit"]
